# cervisia-server

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml
src/: SettingsDefault.toml  billformatter.rs  configuration.rs  importer.rs  mail.rs  main.rs  manager.rs  server.rs
web/: index.html
