[package]
name = "cervisia-server"
version = "0.1.0"
authors = ["nephtys <christopher.kaag@gmail.com>"]

[dependencies]
iron = "0.5"
#rustix-bl = "*"
rustix-bl = { git = "https://github.com/n3phtys/rustix-bl", branch = "master" }
time = "*"
staticfile = "0.4"
simple_logger = "*"
mount = "0.3"
log = "*"
chrono = "*"
lettre = "*"
notify = "*"
config = "*"
toml = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
hyper = "0.11.9"
reqwest = "*"
rand = "*"
router = "0.5"
lazy_static = "*"
params = "0.7"
persistent = "0.3"


